  - Energy cost reduced by 25% all particle cannons.
  - All LRSL models penetrates through enemies (including SIG Sniper).
  - Rate of fire on Monster and Monster-S reduced from 60/s to 20/s.
  - Damage increased 50% for all homing weapons.
  - Energy cost reduced by 25% for all homing weapons.
  - Plasma Grenade Σ costs no energy.
  - Ghost Chaser's projectiles live twice as long.
  - Special weapons cost no energy.

FENCER
  - Vibro Roller is considerably faster in most aspects.
  - Flashing Spear has a 50% increased range.
  - Spine Driver has a 20% increased range.
  - Reduced spread Dexter Automatic Shotguns by 30%.
  - Reduced spread Cannon Shot by 15%.
  - Damage increased by 50% for all Mortars
  - Mortars inherently aim up a bit to make aiming more natural.
  - Light Mortars get jump boosters equipped instead of zoom.
  - Added dash booster to Arm Hound.
  - Blast Radius on Arcane 6-Barrel increased by 60%.
  - Added jump booster to High Altitude Impact Missiles.
  - Phoenix is able to lock on without guidance.

AIR RAIDER
  - All support posts will reload in the background. (Not Life Vendor or guns.)
  - Response time for Cannon (Artillery Squad) strikes reduced by 75%.
  - Cannon (Artillery Squad) starts fully reloaded.
  - Cannon (Artillery Squad) changed to a rapid blitz where every shot lands within the same two seconds.
  - All Air Whale strikes reload over time instead of using credits.
  - Rule of God's damage increased by 100%.
  - All Limpet Guns can detonate without reloading.
  - All C-Bombs, Roller Bombs, and Beetles can detonate without reloading.
  - All Bunkers reload in the background.
  - Amount of wires increased by 100% for all Wire launchers.
  - Titan starts 80% reloaded instead of 40%.
  - Durability for Titan increased by 150%.
  - Requiem Gun projectile of Titan travels 200 times faster.
  - SDL1's delivery chopper will spawn instantly.
  - All SDL1 models are 50% heavier and has 200% more grip.