@@ -27,7 +27,7 @@ WING DIVER
   - Energy cost reduced by 25% for all homing weapons.
   - Plasma Grenade Σ costs no energy.
   - Ghost Chaser's projectiles live twice as long.
-  - Special weapons cost no energy.
+  - Special weapons energy cost reduced by 50%.
 
 FENCER
   - Vibro Roller is considerably faster in most aspects.
@@ -85,6 +85,7 @@ WING DIVER
   - Electric Rapier | Short-Range
   - Electric Rapier 2 | Short-Range
   - Electric Rapier 3 | Short-Range
+  - SIG Chainsaw | Mid-Range Laser
   - Grom-Z | Mid-Range Electric
   - Raijin Z | Sniper Weapons
   - Gleipnir ? | Special Weapons
